@@ -1,5 +1,7 @@
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
 DIST kadu-0.6.5-rc1.tar.bz2 2298356 RMD160 5058c743c55745faf55170efd22af72cf65a62c2 SHA1 a768e816a612c28e36a8c2eaa8a253962eb41178 SHA256 6ba6da04793bb8c0166c00fa6698d7013cfe7e5952a5162b2ce94f74246d4f2a
+DIST kadu-0.6.5-rc2.tar.bz2 1316088 RMD160 c25c229edb88c4aa62d2ddd2b0ee98296f70a378 SHA1 977fe5ead95f45751431de1718a0f6f05ee63a4c SHA256 dc0292ee94919e161b7e2e27f9d00b9cf27d5faf53c5fbda35db3cda81de5ff6
 EBUILD kadu-exec_notify-0.6.0.2.ebuild 272 RMD160 2dcabe3a1c8c42023c4172e59e63a3928c9eda3a SHA1 95efb30528f7c02eb0ed77e15ccac01d06ee9e41 SHA256 4fbdcf3f572c64e3a215f664e060b7bf537e16ab46149fc30adcc781648d3bb7
 EBUILD kadu-exec_notify-0.6.5_rc1.ebuild 212 RMD160 bcaa16d402dab5d8eb6336541eb5bb20ba1e077a SHA1 00f283251a27f6ef1370e8e78d5fcac5fffa6ca0 SHA256 dbac63cd8d6fad612fb3749196ee2929830cc28c59f9ba621ea189a5f6ebeddf
-MISC ChangeLog 520 RMD160 39c89c4bec8b09dc3eddea312c3b7e3c1a147dc2 SHA1 cc0169d3fa30ac003f91b8dafd59f4ea9071c370 SHA256 da070adf23f333cdcda072a6f0a9bd72c5ee2741804a425e3b6cb5aec0979919
+EBUILD kadu-exec_notify-0.6.5_rc2.ebuild 212 RMD160 bcaa16d402dab5d8eb6336541eb5bb20ba1e077a SHA1 00f283251a27f6ef1370e8e78d5fcac5fffa6ca0 SHA256 dbac63cd8d6fad612fb3749196ee2929830cc28c59f9ba621ea189a5f6ebeddf
+MISC ChangeLog 618 RMD160 b7e078078fd36c9af4d4c9019f92d25ffc556031 SHA1 53baea00e9cf0086f3ddcacecd8cd22c440ae843 SHA256 0f9271a07d030224106324520a109d07c8fb149cc1cce09f21b32de9718498d8
