@@ -1,0 +1,15 @@
+#
+# PACKAGE INFORMATION
+#
+
+inherit kadu-base
+
+MOD_DEPEND=">=net-im/kadu-notify-${PV}"
+
+inherit kadu-mod
+
+DESCRIPTION="Exec notification module for Kadu"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
